# cpp-cmake-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/src/: main.cpp
libs/: CMakeLists.txt
libs/lib1/: CMakeLists.txt  lib1.cpp
libs/lib1/include/lib1/: lib1.h
libs/lib1/tests/: CMakeLists.txt  main.cpp
libs/lib2/: CMakeLists.txt  lib2-priv-header.h  lib2-priv-impl.cpp  lib2-pub-impl.cpp  lib2.cpp
libs/lib2/include/lib2/: lib2-pub-header.h  lib2.h
libs/lib2/tests/: CMakeLists.txt  Test.h  main.cpp
